Fixed issue of data not showing the first time.
Created 3rd view, '/event/' and established the router and controller for it

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,9 +68,6 @@ header {
         background-color: gray;
         color: white;
         font-family: $font-stack1;
-        img {
-            margin-left: 30%;
-        }
     }
     #list-view {
 //        border: 1px solid blue;
